static/site.css
/* ... */
#settings div {
  display: flex;
  flex-direction: column;
}
#settings-main, #settings-lang,
#settings-background, #settings-sound,
#settings-zen {
  width: 200px;
}
#settings-board {
  width: 300px;
}
#settings-board div {
  margin: 5px;
}

#btn-logout {
  border-radius: 5px 0px 0px 0px;
}
#settings-lang label:last-child,
#soundtheme label:last-child,
#settings-background label:last-child,
#zen-selector label:last-child,
#btn-zen {
  border-radius: 0px 0px 0px 5px;
}

#sound-volume {
  width: 90%;
}
#settings div.labelled, div.labelled, div.arrow-toggle, div.infiniteAnalysis-toggle, div.nnue-toggle, div.fsfDebug-toggle, div.alice-mirror-toggle {
  display: flex;
  align-items: center;
  flex-direction: row;
}
.labelled label {
  padding-left: 0;
}
div.labelled input[type="range"] {
  margin-right: 1ch;
}
div.labelled > div {
  direction: ltr;
  flex: 0 0 auto;
  display: block;
  text-align: right;
}
#settings-buttons button {
  text-align: left;
  padding-left: 1rem;
  padding-right: 2rem;
}
#settings-buttons button:hover {
  color: #fff;
}
button#btn-logout:hover {
  background-color: #c33;
}
button#btn-lang:hover,
button#btn-sound:hover,
button#btn-background:hover,
button#btn-game-category:hover,
button#btn-board:hover,
button#btn-zen:hover {
  background-color: var(--green-hover);
}

#settings input[type='radio']:checked + label {
  background-color: var(--green-hover);
}

#settings input[type='radio']:hover + label {
  background-color: var(--green-hover);
  opacity: 0.7;
}

#settings-lang > form, #settings-background > form, #settings-game-category > form {
  display: flex;
  flex-direction: column;
}

#settings-sound > div > div {
  flex-direction: column;
}

#board-settings > div {
  flex-direction: row;
  align-items: center; /* in Safari the inputs and labels are not vertically aligned */
}

#style-settings {
  display: flex;
}
settings-board,
settings-pieces {
  display: grid;
  grid-template-columns: auto auto;
  grid-gap: 0.5em;
  border: 1px solid var(--border-color);
}
settings-board {
  grid-template-rows: auto auto;
}

button.back {
  display: flex;
}

#username,
.login {
  line-height: var(--site-header-height);
  font-size: 17px;
}
.site-buttons > div > button:hover {
  color: var(--blue-hover);
}
.site-buttons button {
  color: var(--font-color);
  background-color: inherit;
  font-size: 17px;
  height: 3rem;
  line-height: 3rem;
  border: none;
  border-radius: unset;
}
.site-buttons button.back {
  font-size: 15px;
  height: unset;
  line-height: unset;
  padding: 1rem;
}
.site-buttons #settings-main button{
font-size: 14px;
}
.user-link {
  padding-right: 8px;
}
@media only screen and (max-width: 799px) {
.user-link {font-size: 0.8em;}
.site-buttons #settings-main button {font-size: 12px;}
}
a {
  white-space: break-spaces;
}
a,
.user-link:link,
.user-link:visited {
  color: var(--font-color);
  text-decoration: none;
  white-space: break-spaces;
  overflow: hidden;
}
a,
.user-link,
.user-link:active {
  color: var(--link-color);
}
a:hover,
.user-link:hover {
  color: var(--link-hover);
}
p a,
.blogs ul li a,
div.guide li a {
  color: var(--link-hover);
}
div a {
  cursor: pointer;
}
.disabled {
  pointer-events: none;
  cursor: default;
  opacity: 0.6;
}
.reflist {
  margin-right: 1.2em;
  font-weight: bold;
  text-decoration: none;
  font-size: 0.85em;
}
.movelist-block {
  grid-area: moves;
  display: flex;
  flex-flow: column nowrap;
  justify-content: center;
  background: var(--bg-color0);
  box-shadow: var(--base-shadow);
}

div.result, div.status {
  width: 100%;
  display: block;
  font-size: 1.2em;
  text-align: center;
}
div.result {
  font-weight: bold;
  border-top: 1px solid var(--bg-color2);
}
div.status {
  font-style: italic;
}
.lobby-button,
.donate-button,
button.button-primary,
button#import,
button.paste-url {
  background-color: var(--bg-color2);
  border: none;
  color: var(--font-color);
  padding: 15px 2px;
  text-align: center;
  text-decoration: none;
  font-size: 18px;
  margin: 4px 2px;
  box-shadow: var(--base-shadow);
}
.lobby-button {
  width: 100%;
  margin: 20px 2px;
}
@media (max-width: 799px) {
  .lobby-button {
    padding: 0.5em;
    margin: 0.2em 0;
  }
}
button.button-primary,
button#import,
button.join,
button.submit {
  padding: 0.8em 1em;
  margin: 2px 2px;
  border-radius: 4px;
  color: White;
  background-color: var(--blue-hover);
  white-space: nowrap;
}
button.paste-url {
  padding: 4px;
  margin: 5px 5px;
  border-radius: 4px;
  color: White;
  background-color: var(--blue-hover);
}
div.import {
  padding-top: 1.5rem;
}
.lobby-button:hover {
  background-color: var(--bg-color1);
}

button.rematch {
  border: none;
  color: var(--font-color);
  background: var(--rematch);
  padding: 18px 0;
}
button.rematch:hover {
  color: #fff;
  background: var(--rematch-hover);
}

button.newopp,
button.analysis {
  border: none;
  color: var(--font-color);
  background-color: var(--bg-color0);
  padding: 12px 0;
}
button.newopp:hover,
button.analysis:hover {
  color: #fff;
  background-color: var(--green-hover);
}

.i-pgn {
  float: left;
  padding: 6px;
  color: var(--link-color-blue);
}

.game-info {
  display: flex;
  flex-direction: column;
  justify-content: center;
  background: var(--bg-color0);
  box-shadow: var(--base-shadow);
  margin-bottom: 16px;
  padding: 12px;
  font-size: 14px;
  border-radius: 3px;
}
.game-info section:not(:last-child) {
  border-bottom: 1px solid var(--border-color);
  margin-bottom: 1.33333vmin;
  padding-bottom: 1.33333vmin;
}
.tourney .icon-trophy::before {
  padding-right: 8px;
}
.tourney .icon-target::before {
  padding-right: 8px;
}
.tourney {
  padding: 2px 6px;
}
.tourney a, .posnum a {
  color: var(--link-color-blue);
}
div.info1.icon,
div.info0.icon::before {
  opacity: 0.6;
}
div.info0,
div.info1 {
  display: flex;
  flex-flow: row;
  margin-bottom: 6px;
}
div.info0.games {
  padding-top: 16px;
}
div.info2 {
  padding-left: 10px;
  padding-bottom: 6px;
}
/* ... */

